--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,33 +1,53 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+.borderless-select.ant-select-outlined:not(.ant-select-customize-input) .ant-select-selector {
+    border: none !important;
+}
+.transparent-select.ant-select-outlined:not(.ant-select-customize-input) .ant-select-selector {
+    background: transparent !important;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+.parallax {
+    overflow: hidden;
+    margin: 0;
+    white-space: nowrap;
+    display: flex;
+    flex-wrap: nowrap;
   }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+  
+  .parallax .scroller {
+    white-space: nowrap;
+    display: flex;
+    flex-wrap: nowrap;
   }
-}
+  
+  .parallax span {
+    display: block;
+    margin-right: 10px;
+  }
+  
+  .floating-label-input:focus ~ .floating-label,
+  .floating-label-input:not(:placeholder-shown) ~ .floating-label {
+    transform: scale(0.70) translateY(-1.2rem);
+    opacity: 1;
+  }
+  .floating-label {
+    transition: transform 0.2s, opacity 0.2s;
+    transform-origin: top left;
+  }
+
+  .floating-label-select:focus ~ .floating-label,
+  .floating-label-select:not([value=""]) ~ .floating-label {
+    transform: scale(0.75) translateY(-1.5rem);
+    opacity: 1;
+  }
+
+  .ant-popover .ant-popover-inner {
+    width: 400px !important;
+  }
+  @media screen and (max-width: 480px) {
+    .ant-popover .ant-popover-inner {
+      width: 250px !important;
+    }
+  }
