--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -64,3 +64,41 @@
   border-bottom: none !important;
   box-shadow: none !important;
 }
+.goog-te-gadget {
+  color: #fffcf5 !important;
+}
+.VIpgJd-ZVi9od-l4eHX-hSRGPd {
+  height: 0px !important;
+  overflow: hidden !important;
+}
+.VIpgJd-ZVi9od-l4eHX-hSRGPd img {
+  height: 0px !important;
+  overflow: hidden !important;
+}
+.goog-te-gadget .goog-te-combo {
+  border: 1px solid #b30015 !important;
+  height: 30px !important;
+  width: 170px !important;
+  border-radius: 5px !important;
+}
+.goog-te-gadget {
+  font-size: 0px !important;
+}
+.VIpgJd-ZVi9od-l4eHX-hSRGPd {
+  height: 0px !important;
+  font-size: 0px;
+}
+.VIpgJd-ZVi9od-l4eHX-hSRGPd img {
+  width: 0px !important;
+  height: 0px !important;
+}
+.VIpgJd-ZVi9od-aZ2wEe-OiiCO-ti6hGc {
+  height: 0px !important;
+  width: 0px !important;
+  overflow: hidden !important;
+}
+.VIpgJd-ZVi9od-l4eHX-hSRGPd,
+.VIpgJd-ZVi9od-l4eHX-hSRGPd:link {
+  font-size: 0px !important;
+  color: #fffcf5 !important;
+}
